# wflDB

./: CLAUDE.md  Cargo.toml  Makefile  README.md  test_phase0.rs  test_phase0_enhanced.rs
.claude/: settings.local.json
benches/: hot_path.rs  hot_path_enhanced.rs  phase1_validation.rs
docs/: phase-0-results.md  phase-1-summary.md
docs/adr/: 001-storage-engine-fjall.md  002-wire-protocol-flatbuffers.md  003-transport-http2-first.md  004-performance-targets.md
examples/: phase0_demo.rs
wfldb-client/: Cargo.toml
wfldb-client/src/: client.rs  error.rs  lib.rs  multipart.rs  streaming.rs
wfldb-core/: Cargo.toml
wfldb-core/src/: error.rs  lib.rs  test_utils.rs  types.rs
wfldb-core/src/auth/: canonical.rs  delegation.rs  jwt.rs  jwt_simple.rs  keys.rs  mod.rs  tdd_tests.rs  timing.rs
wfldb-core/tests/: properties.rs
wfldb-engine/: Cargo.toml
wfldb-engine/src/: bucket.rs  lib.rs  storage.rs
wfldb-engine/tests/: batch.rs  fjall_characterization.rs  gc.rs  io_large.rs  scan.rs
wfldb-net/: Cargo.toml  build.rs
wfldb-net/schemas/: messages.fbs
wfldb-net/src/: lib.rs  protocol.rs  wire.rs
wfldb-net/tests/: wire_characterization.rs
wfldb-server/: Cargo.toml
wfldb-server/src/: handlers.rs  main.rs  server.rs  simple_server.rs  simple_server_fixed.rs
wfldb-server/tests/: transport_characterization.rs
