[workspace]
resolver = "2"
members = [
    "wfldb-core",
    "wfldb-engine", 
    "wfldb-net",
    "wfldb-server",
    "wfldb-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["wflDB Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/wfldb"
homepage = "https://github.com/your-org/wfldb"

[workspace.dependencies]
# Storage & Core
fjall = "2.0"
ulid = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Network Transport
hyper = { version = "1.0", features = ["full"] }
hyper-util = "0.1"
http-body-util = "0.1"

# Serialization
flatbuffers = "24.3"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
blake3 = { version = "1.5", features = ["rayon"] }
hkdf = "0.12"
jwt-simple = "0.12"
rand = "0.8"

# Testing & Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.10"

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Development
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true