[package]
name = "wfldb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ulid = { version = "1.1", features = ["serde"] }
blake3 = { workspace = true }

[dev-dependencies]
rand = "0.8"
tokio = { workspace = true, features = ["rt", "time"] }
proptest = { workspace = true }
wfldb-engine = { path = "../wfldb-engine", features = ["test-utils"] }
tempfile = { workspace = true }