[package]
name = "wfldb-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
test-utils = []

[dependencies]
wfldb-core = { path = "../wfldb-core" }
fjall = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
sha2 = "0.10"
wfldb-engine = { path = ".", features = ["test-utils"] }