[package]
name = "wfldb-net"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wfldb-core = { path = "../wfldb-core" }
flatbuffers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
flatbuffers = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
blake3 = { workspace = true }