[package]
name = "wfldb-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "wfldb-server"
path = "src/main.rs"

[dependencies]
wfldb-core = { path = "../wfldb-core" }
wfldb-engine = { path = "../wfldb-engine" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# HTTP/2 server
hyper = { version = "0.14", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = { workspace = true }

# Serialization & utilities
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"

[dev-dependencies]
tempfile = { workspace = true }